--- a/Parte 1/index.html
+++ b/Parte 1/index.html
@@ -1,17 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title></title>
+    <title>Examen Parte 1</title>
     <link href="./index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Country Facts</h1>
-    <div>
-        <img src="https://images-na.ssl-images-amazon.com/images/I/61k9Epc57ML.png" width="200" />
-        <br>
-        <br>
-    </div>
+    <main>
+      <section>
+        <h1>Country Facts</h1>
+        <div>
+          <img src="https://images-na.ssl-images-amazon.com/images/I/61k9Epc57ML.png" width="200" />
+          <br>
+          <p>Se agrego parrafo y salto de linea</p>
+          <br>
+        </div>
+      </section>
+    </main>
+    
     <form  class="js-search-form">
       <span>Search for a country:</span>
       <input type="text" class="js-query" placeholder="mexico" />
